src/test/deca/syntax/invalid/readany/ble_void_ble_readfloat.deca
// Description :
//
//      Test syntaxiquement incorrect de : <= readFloat() 
//      
// 
// Résultats : 
// 
//      N/A 
//
// Historique :
// 
//    Créé le 06/06/2023 par gl03

{ 
    boolean y =  <= readFloat(); 
}